Team updates completed, general work on blog section started, tried fixing problems with the header image but not fixed yet.

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -27,81 +27,192 @@
       </div>
     </div>
   </div>
-  <div class="about-banner"><a href="http://www.freepik.com"><img src="images/about-banner.svg" alt="Designed by fullvector / Freepik" class="img-banner about-banner-pic"></a>
+  <div class="section-body">
+  <div class="about-banner">
+
     <div class="div-centered-v">
-      <div class="section-title">About us</div>
-      <div class="shadow-title">TEAM TRUFFLIN</div>
+      <div class="section-title">About Us</div>
       <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
+      <a href="http://www.freepik.com"><img src="images/about-banner.svg" alt="Designed by fullvector / Freepik" class="img-banner about-banner-pic"></a>
     </div>
   </div>
-  <div class="flex-horizontal-container">
-    <div class="flexblock-headshot">
-      <div class="emily-headshot"></div>
+  </div>
+  <div class="section-body">
+    <div class="flex-horizontal-container">
+      <div class="section-title">Team Members</div>
     </div>
-    <div class="flexblock-heading">
-      <div class="about-name">Emily Gong</div>
-      <div class="title">CLIENT LEAD</div>
-      <div class="person-links">
-        <a href="#"><img src="images/about-icon1.png" class="link"></a>
-        <a href="#"><img src="images/about-icon2.png" class="link"></a>
-        <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+    <!-- Emily's information -->
+    <div class="flex-horizontal-container">
+      <div class="flexblock-headshot">
+        <div class="emily-headshot"></div>
+      </div>
+      <div class="flexblock-heading">
+        <div class="about-name">Emily Gong</div>
+        <div class="title">CLIENT LEAD</div>
+        <div class="person-links">
+          <a href="#"><img src="images/about-icon1.png" class="link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+      </div>
+      <div class="flexblock-text">
+        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+        <div class="text-descript-block">
+          <div class="text-descript-2">
+            <div class="text-descript-header">ABOUT ME</div>
+            <div class="text-descript-info">Experience in business intelligence and start-up culture brought me to HCI and user-centered design. </div>
+          </div>
+          <div class="text-descript-3">
+            <div class="text-descript-header">ALERT EGO</div>
+            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
+          </div>  
+        </div>    
+      </div>
     </div>
-    <div class="flexblock-text">
-      <div class="text-descript-1">Experience in business intelligence and start-up culture brought me to HCI and user-centered design.</div>
-      <div class="text-descript-2">Experience in business intelligence and start-up</div>      
+
+    <!-- June's information -->
+    <div class="flex-horizontal-container">
+      <div class="flexblock-text">
+        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+        <div class="text-descript-block">
+          <div class="text-descript-2">
+            <div class="text-descript-header">ABOUT ME</div>
+            <div class="text-descript-info">My background in psychology and neuroscience began my leap into UX research related work. </div>
+          </div>
+          <div class="text-descript-3">
+            <div class="text-descript-header">ALERT EGO</div>
+            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
+          </div>  
+        </div>    
+      </div>
+      <div class="flexblock-heading-right">
+        <div class="about-name">June Liu</div>
+        <div class="title">QUANT RESEARCH LEAD</div>
+        <div class="person-links">
+          <a href="#"><img src="images/about-icon1.png" class="link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+      </div>
+      <div class="flexblock-headshot">
+        <div class="june-headshot"></div>
+      </div> 
+    </div>
+
+    <!-- Yingli's information -->
+    <div class="flex-horizontal-container">
+      <div class="flexblock-headshot">
+        <div class="yingli-headshot"></div>
+      </div>
+      <div class="flexblock-heading">
+        <div class="about-name">Yingli Sieh</div>
+        <div class="title">QUAL RESEARCH LEAD</div>
+        <div class="person-links">
+          <a href="#"><img src="images/about-icon1.png" class="link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+      </div>
+      <div class="flexblock-text">
+        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+        <div class="text-descript-block">
+          <div class="text-descript-2">
+            <div class="text-descript-header">ABOUT ME</div>
+            <div class="text-descript-info">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
+          </div>
+          <div class="text-descript-3">
+            <div class="text-descript-header">ALERT EGO</div>
+            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
+          </div>  
+        </div>    
+      </div>
+    </div>
+
+    <!-- Qian's information -->
+    <div class="flex-horizontal-container">
+      <div class="flexblock-text">
+        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+        <div class="text-descript-block">
+          <div class="text-descript-2">
+            <div class="text-descript-header">ABOUT ME</div>
+            <div class="text-descript-info">My background in psychology and neuroscience began my leap into UX research related work. </div>
+          </div>
+          <div class="text-descript-3">
+            <div class="text-descript-header">ALERT EGO</div>
+            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
+          </div>  
+        </div>    
+      </div>
+      <div class="flexblock-heading-right">
+        <div class="about-name">Qian Wang</div>
+        <div class="title">DEV LEAD</div>
+        <div class="person-links">
+          <a href="#"><img src="images/about-icon1.png" class="link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+      </div>
+      <div class="flexblock-headshot">
+        <div class="qian-headshot"></div>
+      </div> 
+    </div>
+
+    <!-- Nina's information -->
+    <div class="flex-horizontal-container">
+      <div class="flexblock-headshot">
+        <div class="nina-headshot"></div>
+      </div>
+      <div class="flexblock-heading">
+        <div class="about-name">Nina Yang</div>
+        <div class="title">DESIGN LEAD</div>
+        <div class="person-links">
+          <a href="#"><img src="images/about-icon1.png" class="link"></a>
+          <a href="#"><img src="images/about-icon2.png" class="link"></a>
+          <a href="#"><img src="images/about-icon3.png" class="link"></a></div>
+      </div>
+      <div class="flexblock-text">
+        <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
+        <div class="text-descript-block">
+          <div class="text-descript-2">
+            <div class="text-descript-header">ABOUT ME</div>
+            <div class="text-descript-info">As a trained designer and developer by trade, I am future-focused and interdisciplinary by nature.</div>
+          </div>
+          <div class="text-descript-3">
+            <div class="text-descript-header">ALERT EGO</div>
+            <div class="text-descript-info">Donec sed odio dui. Donec sed odio dui.</div>
+          </div>  
+        </div>    
+      </div>
     </div>
   </div>
-  <div class="flex-horizontal-container-right">
-    <div class="flexblock-text">
-      <div class="text-descript">My background in psychology and neuroscience began my leap into UX research related work.</div>   
+
+  <div class="section-body">
+    <div class="flex-horizontal-container">
+      <div class="section-title">Snippets of Our Journey</div>
     </div>
-    <div class="flexblock-right">
-      <div class="about-name">June Liu</div>
-      <div class="title">Client Lead</div>
-      <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
+    <div class="flex-horizontal-container">
+      <div class="flexblock-text">
+        <div class="blog-box"></div>
+        <div class="blog-box"></div>
+        <div class="blog-box"></div>
+      </div>
+      <div class="flexblock-text">
+        <div class="blog-box"></div>
+        <div class="blog-box"></div>
+        <div class="blog-box"></div>
+      </div>
+      <div class="flexblock-text">
+      </div>
     </div>
-    <div class="flexblock">
-      <div class="june-headshot"></div>
+    <div class="flex-horizontal-container">
+      <div class="text-descript-info">blah blah blah</div>
+      <div class="text-descript-info">blah blah blah</div>
+      <div class="text-descript-info">blah blah blah</div>
     </div>
-  </div>
-  <div class="flex-horizontal-container-right">
-    <div class="flexblock">
-      <div class="yingli-headshot"></div>
-      <div class="about-name">Yingli Sieh</div>
-      <div class="text-descript">As an Accelerated MHCI student, I value the opportunity to apply my academic skills to a real-life project.</div>
-      <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
-    </div>
-  </div>
-  <div class="flex-horizontal-container-right">
-    <div class="flexblock">
-      <div class="qian-headshot"></div>
-      <div class="about-name">Qian Wang</div>
-      <div class="text-descript">Computer science background gives me a logical and thorough mindset, while design is my true passion!</div>
-      <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
-    </div>
-  </div>
-  <div class="flex-horizontal-container-right">
-    <div class="flexblock">
-      <div class="nina-headshot"></div>
-      <div class="about-name">Nina Yang</div>
-      <div class="text-descript">As a trained designer and developer by trade, I am future-focused and interdisciplinary by nature.</div>
-      <div class="person-links"><a href="#" class="link">LinkedIn</a><a href="#" class="link">Portfolio</a><a href="#" class="link">CV</a></div>
-    </div>
-  </div>
-  <div class="about-banner-copy"><a href="http://www.freepik.com"><img src="images/ln.svg" alt="" class="team-img">
-    <div class="div-centered-v w-clearfix">
-      <div class="section-title-right">About us</div>
-      <div class="shadow-title-right">TEAM TRUFFLIN</div>
-      <div class="normal-text-right">As the foremost dark-pool trading platform, Liquidnet has led the way into privatized and anonymized trading, especially for institutional investors like large organizations on the scale of banks and insurance companies. Their technologies have focused on innovation and value to the trader over simple trade execution, which embodies their belief that improving the trader’s liquidity opportunities comes first.</div>
-    </div>
-    <div class="div-centered-h">
-      <div class="normal-text">In the scope of this project, Liquidnet aims to do the following: better understand the state of their many users while using their product, especially when dealing with time-sensitive alerts; define ways to understand their user’s behaviors and needs and translate needs into targeted content; and finally, explore the complexity of technology and data-driven design in the development of new products.</div>
+    <div class="flex-horizontal-container">
+      <div class="section-title">Want to read more about our journey?</div>
     </div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
-    <div class="footer-copyright">@ Copyright 2019</div><img src="images/Asset-73x.svg" alt="Designed by fullvector / Freepik" class="image-5"></footer></a>
+    <div class="footer-copyright">Designed and Coded by </div><img src="images/Asset-73x.svg" alt="Designed by fullvector / Freepik" class="image-5"></footer></a>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <!-- <script src="js/webflow.js" type="text/javascript"></script> -->
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
