Footer fixed, some small changes when trying to add under-header bars and image changes in the heading.

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -28,18 +28,18 @@
     </div>
   </div>
   <div class="section-body">
-  <div class="about-banner">
-
-    <div class="div-centered-v">
+    <div class="about-banner">
       <div class="section-title">About Us</div>
       <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
       <a href="http://www.freepik.com"><img src="images/about-banner.svg" alt="Designed by fullvector / Freepik" class="img-banner about-banner-pic"></a>
     </div>
   </div>
-  </div>
   <div class="section-body">
     <div class="flex-horizontal-container">
       <div class="section-title">Team Members</div>
+    </div>
+    <div class="flex-horizontal-container">
+      <div class="section-title-bar"></div>
     </div>
     <!-- Emily's information -->
     <div class="flex-horizontal-container">
@@ -210,7 +210,11 @@
     </div>
   </div>
   <footer id="footer" class="footnote w-clearfix">
-    <div class="footer-copyright">Designed and Coded by </div><img src="images/Asset-73x.svg" alt="Designed by fullvector / Freepik" class="image-5"></footer></a>
+    <div class="footer-wrapper">
+      <p class="">Design and coded by </p>
+        <img src="images/Asset-73x.svg" alt="Trufflin Logo">
+        <p class="">@ Copyright 2019</p>
+    </div>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <!-- <script src="js/webflow.js" type="text/javascript"></script> -->
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
