Light purple background & adding process roadmap img

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -76,6 +76,7 @@
   <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our process</div>
+      <img src="images/homepage/3-process-bar.png" alt="" class="hp-process-bar">
     <div class="columns w-row">
       <div class="column w-col w-col-4 w-col-stack">
         <div class="hp-process-card">
@@ -106,7 +107,7 @@
 </div>
 
 <!-- Our Team -->
-<div id="our-team" class="na-section homepage-section-wrapper">
+<div id="our-team" class="na-section homepage-section-wrapper bg-light-purple">
   <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our team</div>
