--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -24,7 +24,7 @@
   <div class="div-centered-v">
     <div class="hp-banner-title" data-ix="new-interaction">Re-shaping a Trader’s Digital Experience</div>
     <div class="hp-banner-paragraph">Trading desks are shrinking as algorithms and trading software become a one-stop shop for liquidity and research. How will Liquidnet continue to deliver unique value to traders in both liquidity and research data?</div>
-    <img src="images/homepage/0-banner-illustration.png" alt="Designed by fullvector / Freepik" class="banner-img">
+      <a href="https://www.freepik.com/" class="banner-img"><img src="images/homepage/0-banner-illustration.svg" alt="Designed by fullvector / Freepik" class="banner-img"></a>
   </div>
 </div>
 
@@ -76,27 +76,27 @@
   <div class="div-centered-v">
     <div class="homepage-subtitle">GET TO KNOW</div>
     <div class="homepage-title">Our process</div>
-      <img src="images/homepage/3-process-bar.png" alt="" class="hp-process-bar">
+      <img src="images/homepage/3-process-bar.svg" alt="" class="hp-process-bar">
     <div class="columns w-row">
-      <div class="column w-col w-col-4 w-col-stack">
+      <div class="hp-process-card-wrapper w-col w-col-4 w-col-stack">
         <div class="hp-process-card">
-          <img src="images/homepage/3-process-icon1.png" alt="" class="image-3">
+          <img src="images/homepage/3-process-icon1.svg" alt="" class="image-3">
           <div class="card-title">Research Phase</div>
           <div class="normal-text process-card-text">Our subject and generative research focused on understanding the financial sphere and the complexity of trader’s lives, particularly in institutional trading.</div>
           <a href="research.html" target="_blank" class="button-solid button-red w-button">Read More</a>
         </div>
       </div>
-      <div class="column-2 w-col w-col-4 w-col-stack">
+      <div class="hp-process-card-wrapper w-col w-col-4 w-col-stack">
         <div class="hp-process-card">
-          <img src="images/homepage/3-process-icon2.png" alt="" class="image-3 bulb">
+          <img src="images/homepage/3-process-icon2.svg" alt="" class="image-3 bulb">
           <div class="card-title blue-text">Conceptual Phase</div>
           <div class="normal-text process-card-text">After conducting a variety of research activities and synthesizing findings, the team defined opportunity areas and began creating design concepts.</div>
           <a href="concept.html" target="_blank" class="button-solid button-blue w-button">Read More</a>
         </div>
       </div>
-      <div class="column-3 w-col w-col-4 w-col-stack">
+      <div class="hp-process-card-wrapper w-col w-col-4 w-col-stack">
         <div class="hp-process-card">
-          <img src="images/homepage/3-process-icon3.png" alt="" class="image-3">
+          <img src="images/homepage/3-process-icon3.svg" alt="" class="image-3">
           <div class="card-title purple-text">Design Phase</div>
           <div class="normal-text process-card-text">During the summer, our team will move into designing deliverables based upon our final presentation with our clients. This will be our focus for the summer.</div>
           <a data-aos="fade-up" href="coming-soon.html" class="button-solid button-purple w-button">Read More</a>
