Fixed the blog section and some alignment problems with the intro text and blog section!

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/about.html
@@ -18,6 +18,7 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
+
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
     <div class="container w-container"><a href="#" class="w-nav-brand"></a>
@@ -28,9 +29,11 @@
     </div>
   </div>
   <div class="section-body">
-    <div class="about-banner">
-      <div class="section-title">About Us</div>
-      <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
+    <div class="flex-horizontal-container" id="about-banner">
+      <div class="section-body">
+        <div class="section-title">About Us</div>
+        <div class="normal-text">Team Trufflin members are well-versed in studying human behavior be it from a variety of fields; our backgrounds include but are not limited to business, cognitive sciences, development, and design. Like the pig that digs for the ‘black gold’ of truffles, we are digging into the financial sphere and uprooting opportunities for Liquidnet as they delve into user research and design.</div>
+      </div>
       <a href="http://www.freepik.com"><img src="images/about-banner.svg" alt="Designed by fullvector / Freepik" class="img-banner about-banner-pic"></a>
     </div>
   </div>
@@ -38,7 +41,7 @@
     <div class="flex-horizontal-container">
       <div class="section-title">Team Members</div>
     </div>
-    <div class="flex-horizontal-container">
+    <div class="flex-horizontal-container-right" >
       <div class="section-title-bar"></div>
     </div>
     <!-- Emily's information -->
@@ -168,7 +171,7 @@
       </div>
       <div class="flexblock-text">
         <div class="text-descript-1">Nullam id dolor id nibh ultricies vehicula ut id elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. </div>
-        <div class="text-descript-block">
+      <div class="text-descript-block">
           <div class="text-descript-2">
             <div class="text-descript-header">ABOUT ME</div>
             <div class="text-descript-info">As a trained designer and developer by trade, I am future-focused and interdisciplinary by nature.</div>
@@ -181,34 +184,42 @@
       </div>
     </div>
   </div>
-
-  <div class="section-body">
-    <div class="flex-horizontal-container">
-      <div class="section-title">Snippets of Our Journey</div>
-    </div>
-    <div class="flex-horizontal-container">
-      <div class="flexblock-text">
-        <div class="blog-box"></div>
-        <div class="blog-box"></div>
-        <div class="blog-box"></div>
+  <div class="background">
+    <div class="section-body" id="blog-body">
+      <div class="flex-horizontal-container">
+        <div class="section-title">Snippets of Our Journey</div>
       </div>
-      <div class="flexblock-text">
-        <div class="blog-box"></div>
-        <div class="blog-box"></div>
-        <div class="blog-box"></div>
+      <div class="flex-horizontal-container-right" >
+        <div class="section-title-bar"></div>
       </div>
-      <div class="flexblock-text">
+      <div class="flex-horizontal-container-spaced">
+        <div class="flexblock-text-2">
+          <div class="blog-box"></div>
+          <div class="blog-box"></div>
+          <div class="blog-box"></div>
+        </div>
+        <div class="flexblock-text-2">
+          <div class="blog-box"></div>
+          <div class="blog-box"></div>
+          <div class="blog-box"></div>
+        </div>
+        <div class="flexblock-text-2">
+        </div>
       </div>
-    </div>
-    <div class="flex-horizontal-container">
-      <div class="text-descript-info">blah blah blah</div>
-      <div class="text-descript-info">blah blah blah</div>
-      <div class="text-descript-info">blah blah blah</div>
-    </div>
-    <div class="flex-horizontal-container">
-      <div class="section-title">Want to read more about our journey?</div>
+      <div class="flex-horizontal-container-spaced" id="blog-text">
+        <div class="blog-descript-info">Blog Title 1</div>
+        <div class="blog-descript-info">Blog Title 2</div>
+        <div class="blog-descript-info">Blog Title 3</div>
+      </div>
+      <div class="flex-horizontal-container">
+        <div class="about-name">Want to read more about our journey?</div>
+      </div>
+      <div class="flex-horizontal-container" id="learn-more">
+        <img src="images/button-learn-more.png" alt="Trufflin Logo">
+      </div>
     </div>
   </div>
+  
   <footer id="footer" class="footnote w-clearfix">
     <div class="footer-wrapper">
       <p class="">Design and coded by </p>
