update navbar for homepage

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/index.html
@@ -14,6 +14,22 @@
 </head>
 
 <body>
+<div class="navbar homepage">
+    <a href="index.html" class="nav-brand">
+        <img src="images/Utility/nav_homepage.png"/>
+    </a>
+    <nav class="nav-menu">
+        <a href="research.html" >Research</a>
+        <a href="ideation.html" >Ideation</a>
+        <a href="design.html" >Design</a>
+        <a href="about.html">About</a>
+        <a href="glossary.html" >Glossary</a>
+    </nav>
+    <div class="menu-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+    </div>
+</div>
+
 <div class="homepage-banner">
     <div class="div-centered-v">
         <div class="hp-banner-title">Re-shaping a Trader’s Digital Experience</div>
